@@ -335,6 +335,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/x2goutils.{cpp,h}: add new function find_binary (). Searches for a
       specific binary in a colon-separated list of paths. Really just a compat
       function, as Qt 5 includes QStandardPaths::findExecutable ().
+    - src/pulsemanager.cpp: auto-detect PA binary in $PATH and MacPorts
+      default prefix as well on OS X.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
